UidMinter service creates uids from Postgres procedure

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,7 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+uidminter:
+  <<: *default
+  database: db/uidminter.sqlite3
