--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -143,3 +143,7 @@ RSpec/InstanceVariable:
 RSpec/DescribeClass:
   Exclude:
     - 'spec/**/*'
+
+RSpec/AnyInstance:
+  Exclude:
+    - 'spec/**/*'
