--- a/config/solr.yml
+++ b/config/solr.yml
@@ -1,7 +1,7 @@
 # This is a sample config file that points to a solr server for each environment
 development:
-  url: http://localhost:8984/solr/aic_development
+  url: http://127.0.0.1:<%= ENV['SOLR_DEVELOPMENT_PORT'] || 8983 %>/solr/hydra-development
 test:
-  url: http://localhost:8985/solr/aic_test
+  url: http://localhost:<%= ENV['SOLR_TEST_PORT'] || 8985 %>/solr/hydra-test
 production:
   url: http://your.production.server:8080/bl_solr/core0
