--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,15 +1,15 @@
 development:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: https://localhost:8443/fedora/rest
+  url: http://127.0.0.1:<%= ENV['FCREPO_DEVELOPMENT_PORT'] || 8986 %>/rest
   base_path: /dev
 test:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: https://localhost:8443/fedora/rest
+  url: http://localhost:<%= ENV['FCREPO_TEST_PORT'] || 8986 %>/rest
   base_path: /test
 production:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: https://localhost:8443/fedora/rest
+  url: http://localhost:8986/rest
   base_path: /prod
