--- a/config/role_map.yml
+++ b/config/role_map.yml
@@ -1,19 +1,12 @@
 development:
-  archivist:
-    - archivist1@example.com
+  admin:
+    - aweadadmin
+    - scossuadmin
+    - admin
 test:
-  archivist:
-    - archivist1@example.com
-    - archivist2@example.com
-    - leland_himself@example.com
-  admin_policy_object_editor:
-    - archivist1@example.com
-  donor:
-    - donor1@example.com
-    - leland_himself@example.com
-  researcher:
-    - archivist1@example.com
-    - researcher1@example.com
-  patron:
-    - patron1@example.com
-    - leland_himself@example.com
+  admin:
+    - admin
+production:
+  admin:
+    - god@aic.org
+    - awead@aic.org
