Update doctypes and fix source list typo. (#286)
* Update doctypes and fix source list typo.

* Update tests.

--- a/config/lists/source.yml
+++ b/config/lists/source.yml
@@ -3,5 +3,5 @@ description: "Original document for non-born-digital assets."
 members:
  - pref_label: "Color Transparency"
    description: ""
- - pref_label: "Back and White"
+ - pref_label: "Black and White"
    description: ""
