--- a/config/lists/keyword.yml
+++ b/config/lists/keyword.yml
@@ -13,7 +13,7 @@ members:
     description: ""
   - pref_label: "New employee orientation"
     description: ""
-  - pref_label: "conservation in progress"
+  - pref_label: "Conservation in progress"
     description: ""
   - pref_label: "Labs/office photography"
     description: ""
@@ -59,5 +59,7 @@ members:
     description: ""
   - pref_label: "AIC Architecture: Renovation"
     description: ""
+  - pref_label: "Needs Revision"
+    description: "Add this keyword to assets that need edits depending on features not currently available in LAKE."
   - pref_label: "AIC Architecture: Facade"
     description: ""
