--- a/config/lists/keyword.yml
+++ b/config/lists/keyword.yml
@@ -1,65 +1,101 @@
 pref_label: "Keyword"
 description: "Keyword attached to the resource."
+type: "AICType.KeywordList"
+additional_types: []
+item_type: "AICType.Keyword"
+additional_item_types: ["AICType.Authority"]
+uid: "LS-3"
 members:
   - pref_label: "After Dark"
     description: ""
+    uid: "KW-1"
   - pref_label: "ArtFEED"
     description: ""
+    uid: "KW-2"
   - pref_label: "Night Heist"
     description: ""
+    uid: "KW-3"
   - pref_label: "Community Associates"
     description: ""
+    uid: "KW-4"
   - pref_label: "Evening Associates"
     description: ""
+    uid: "KW-5"
   - pref_label: "New employee orientation"
     description: ""
+    uid: "KW-6"
   - pref_label: "Conservation in progress"
     description: ""
+    uid: "KW-7"
   - pref_label: "Labs/office photography"
     description: ""
+    uid: "KW-8"
   - pref_label: "Employee Holiday Party"
     description: ""
+    uid: "KW-9"
   - pref_label: "Chairman's Awards"
     description: ""
+    uid: "KW-10"
   - pref_label: "Department Party"
     description: ""
+    uid: "KW-11"
   - pref_label: "Gala"
     description: ""
+    uid: "KW-12"
   - pref_label: "Gallery Reception"
     description: ""
+    uid: "KW-13"
   - pref_label: "Portrait"
     description: ""
+    uid: "KW-14"
   - pref_label: "Installation in-progress"
     description: ""
+    uid: "KW-15"
   - pref_label: "Chicago Object Study Initiative (COSI)"
     description: ""
+    uid: "KW-16"
   - pref_label: "Society for Contemporary Art"
     description: ""
+    uid: "KW-17"
   - pref_label: "Asian Art Society"
     description: ""
+    uid: "KW-18"
   - pref_label: "Antiquarian Society"
     description: ""
+    uid: "KW-19"
   - pref_label: "Facade Banners"
     description: ""
+    uid: "KW-20"
   - pref_label: "Installed Exhibition Marketing"
     description: ""
+    uid: "KW-21"
   - pref_label: "Wreathing Lions"
     description: "Images of marketing installed on trains or at bus stops."
+    uid: "KW-22"
   - pref_label: "Helmet Lions"
     description: ""
+    uid: "KW-23"
   - pref_label: "Parade"
     description: ""
+    uid: "KW-24"
   - pref_label: "Shop Windows"
     description: ""
+    uid: "KW-25"
   - pref_label: "AIC Architecture: Building"
     description: ""
+    uid: "KW-26"
   - pref_label: "AIC Architecture: Gardens"
     description: ""
+    uid: "KW-27"
   - pref_label: "AIC Architecture: Views"
     description: ""
+    uid: "KW-28"
   - pref_label: "AIC Architecture: Renovation"
     description: ""
+    uid: "KW-29"
   - pref_label: "Needs Revision"
     description: "Add this keyword to assets that need edits depending on features not currently available in LAKE."
+    uid: "KW-30"
   - pref_label: "AIC Architecture: Facade"
     description: ""
+    uid: "KW-31"
