--- a/config/lists/light.yml
+++ b/config/lists/light.yml
@@ -1,23 +1,38 @@
 pref_label: "Light Type"
 description: "Light type used to capture the image."
+type: "AICType.LightTypeList"
+additional_types: []
+item_type: "AICType.LightType"
+additional_item_types: ["AICType.Authority"]
+uid: "LS-4"
 members:
   - pref_label: "Transmitted Light"
     description: ""
+    uid: "LT-1"
   - pref_label: "X-Ray"
     description: ""
+    uid: "LT-2"
   - pref_label: "X-Ray Rob Erdman"
     description: ""
+    uid: "LT-3"
   - pref_label: "UV"
     description: ""
+    uid: "LT-4"
   - pref_label: "Normal Light"
     description: ""
+    uid: "LT-5"
   - pref_label: "Raking Light"
     description: ""
+    uid: "LT-6"
   - pref_label: "Axial Light"
     description: ""
+    uid: "LT-7"
   - pref_label: "Polarized Light"
     description: ""
+    uid: "LT-8"
   - pref_label: "Reflected Infrared"
     description: ""
+    uid: "LT-9"
   - pref_label: "Transmitted Infrared"
     description: ""
+    uid: "LT-10"
