--- a/config/lists/view.yml
+++ b/config/lists/view.yml
@@ -1,27 +1,44 @@
-pref_label: "View"
+pref_label: "View Type"
 description: "Viewing angle, overall or detail, etc."
+type: "AICType.ViewTypeList"
+additional_types: []
+item_type: "AICType.ViewType"
+additional_item_types: ["AICType.Authority"]
+uid: "LS-6"
 members:
   - pref_label: "Verso"
     description: ""
+    uid: "VW-1"
   - pref_label: "Recto"
     description: ""
+    uid: "VW-2"
   - pref_label: "Macro"
     description: ""
+    uid: "VW-3"
   - pref_label: "Micro"
     description: ""
+    uid: "VW-4"
   - pref_label: "Overall"
     description: ""
+    uid: "VW-5"
   - pref_label: "Detail"
     description: ""
+    uid: "VW-6"
   - pref_label: "Front"
     description: ""
+    uid: "VW-7"
   - pref_label: "Proper Right"
     description: ""
+    uid: "VW-8"
   - pref_label: "Back"
     description: ""
+    uid: "VW-9"
   - pref_label: "Proper Left"
     description: ""
+    uid: "VW-10"
   - pref_label: "Top"
     description: ""
+    uid: "VW-11"
   - pref_label: "Bottom"
     description: ""
+    uid: "VW-12"
