Add legacy file set to API, ref #1373

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,14 @@ Metrics/ClassLength:
     - 'lib/aic_doc_type.rb'
     - 'app/controllers/catalog_controller.rb'
 
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - app/services/file_set_replacement_service.rb
+
+Metrics/PerceivedComplexity:
+  Exclude:
+    - app/services/file_set_replacement_service.rb
+
 Style/BlockDelimiters:
   Exclude:
     - 'spec/**/*'
