Notify CITI when preferred representation's is set or updated, ref #1441

--- a/config/application.yml
+++ b/config/application.yml
@@ -7,6 +7,10 @@
 # production:
 #   TMPDIR: "path/to/dir"
 development:
-  sample_variable: "foo"
+
 test:
-  sample_variable: "foo"
+  citi_api_uid: "citi_api_uid"
+  citi_api_password: "citi_api_password"
+  citi_api_endpoint: "https://citiworker"
+  citi_api_ssl_verify: "false"
+
