--- a/spec/fixtures/vcr_cassettes/citi_notify.yml
+++ b/spec/fixtures/vcr_cassettes/citi_notify.yml
@@ -11,8 +11,8 @@ http_interactions:
       - application/json
   response:
     status:
-      code: 200
-      message: OK
+      code: 202
+      message: Accepted
     headers:
       Accept-Ranges:
       - bytes
