--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: ruby
 sudo: false
 
-cache: 
+cache:
   bundler: true
   directories:
     - "travis_phantomjs"
+    - "dep_cache"
 
 before_install:
   - gem install bundler
@@ -15,6 +16,11 @@ before_install:
   - "if [ $(phantomjs --version) != '2.1.1' ]; then wget https://assets.membergetmember.co/software/phantomjs-2.1.1-linux-x86_64.tar.bz2 -O $PWD/travis_phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2; fi"
   - "if [ $(phantomjs --version) != '2.1.1' ]; then tar -xvf $PWD/travis_phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2 -C $PWD/travis_phantomjs; fi"
   - "phantomjs --version"
+  - "mkdir -p dep_cache"
+  - "pwd"
+  - "ls -l dep_cache"
+  - "cp config/travis/solr_wrapper_test.yml config/solr_wrapper_test.yml"
+  - "cp config/travis/fcrepo_wrapper_test.yml config/fcrepo_wrapper_test.yml"
 
 rvm:
   - 2.3.1
