Update ActiveFedora::Noid to allow for custom uid minter, ref #1208
Use UuidMinter to create secure, random UUIDs using Ruby's library. This avoids any reliance on persisting a minter's state either with
a file or in a database.

This change required an update to ActiveFedora::Noid 2.0 which also resulted in an update to ActiveFedora as well.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -88,6 +88,10 @@ Style/PredicateName:
     - 'app/presenters/asset_presenter.rb'
     - 'app/presenters/concerns/citi_presenter_behaviors.rb'
 
+Style/FileName:
+  Exclude:
+    - 'config/initializers/active_fedora-noid.rb'
+
 Rails:
   Enabled: true
 
