Adding additional collection types, ref #1588

--- a/config/lists/collection.yml
+++ b/config/lists/collection.yml
@@ -15,3 +15,9 @@ members:
  - pref_label: "Publishing Report"
    description: ""
    uid: "CL-3"
+ - pref_label: "Exhibition Image Bank"
+   description: ""
+   uid: "CL-4"
+ - pref_label: "Facility Report"
+   description: ""
+   uid: "CL-5"
