Use Graphicsmagick for derivative creation, ref #1925
Imagemagick was causing issues with when generating derivatives from
tiff files. Graphicsmagick offers a better overall solution.

Configure Mini::Magick to use Graphicsmagick instead of Imagemaick and
make other changes to command-line arguments.

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,12 +1,14 @@
 # Environment variable configuration file used by Figaro
 #
 development:
+  hydra_bin_path: "/usr/local/bin"
 
 test:
   citi_api_uid: "citi_api_uid"
   citi_api_password: "citi_api_password"
   citi_api_endpoint: "https://citiworker"
   citi_api_ssl_verify: "false"
+  hydra_bin_path: "/usr/local/bin"
 
 production:
 
