Add publishable flag to open access assets, ref #2031
A separate predicate needs to indicate assets that have been set to an
open access visibility.

Adding to Lakeshore::Visibility, when the visibility is changed to
public, AIC.is_publishable will be set to true. In all other cases, it
is set to false.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,10 +30,12 @@ Metrics/ClassLength:
 Metrics/CyclomaticComplexity:
   Exclude:
     - app/services/file_set_replacement_service.rb
+    - app/models/concerns/permissions/lakeshore_visibility.rb
 
 Metrics/PerceivedComplexity:
   Exclude:
     - app/services/file_set_replacement_service.rb
+    - app/models/concerns/permissions/lakeshore_visibility.rb
 
 Style/BlockDelimiters:
   Exclude:
