Update light type, digitization source and view authority lists. (#394)

--- a/config/lists/light.yml
+++ b/config/lists/light.yml
@@ -9,13 +9,13 @@ members:
   - pref_label: "Transmitted Light"
     description: ""
     uid: "LT-1"
-  - pref_label: "X-Ray"
+  - pref_label: "X-Radiograph"
     description: ""
     uid: "LT-2"
   - pref_label: "X-Ray Rob Erdman"
     description: ""
     uid: "LT-3"
-  - pref_label: "UV"
+  - pref_label: "UV-induced visible fluorescence (UV)"
     description: ""
     uid: "LT-4"
   - pref_label: "Normal Light"
@@ -24,7 +24,7 @@ members:
   - pref_label: "Raking Light"
     description: ""
     uid: "LT-6"
-  - pref_label: "Axial Light"
+  - pref_label: "Specular/Axial Light"
     description: ""
     uid: "LT-7"
   - pref_label: "Polarized Light"
@@ -36,3 +36,9 @@ members:
   - pref_label: "Transmitted Infrared"
     description: ""
     uid: "LT-10"
+  - pref_label: "Beta Radiograph"
+    description: ""
+    uid: "LT-11"
+  - pref_label: "Advanced Imaging Techniques"
+    description: ""
+    uid: "LT-12"
