--- a/config/lists/source.yml
+++ b/config/lists/source.yml
@@ -6,9 +6,18 @@ item_type: "AICType.DigitizationSource"
 additional_item_types: ["AICType.Authority"]
 uid: "LS-5"
 members:
- - pref_label: "Color Transparency"
+ - pref_label: "4 x 5 Color Transparency"
    description: ""
    uid: "DS-1"
- - pref_label: "Black and White"
+ - pref_label: "8 x 10 Large Format B/W Negative"
    description: ""
    uid: "DS-2"
+ - pref_label: "35mm Slide/Negative"
+   description: ""
+   uid: "DS-3"
+ - pref_label: "Archival Document"
+   description: "Includes old reports, labels, etc from paper file"
+   uid: "DS-4"
+ - pref_label: "Color or B/W Print"
+   description: ""
+   uid: "DS-5"
