--- a/config/lists/view.yml
+++ b/config/lists/view.yml
@@ -6,13 +6,13 @@ item_type: "AICType.ViewType"
 additional_item_types: ["AICType.Authority"]
 uid: "LS-6"
 members:
-  - pref_label: "Verso"
+  - pref_label: "Back/Verso"
     description: ""
     uid: "VW-1"
-  - pref_label: "Recto"
+  - pref_label: "Front/Recto"
     description: ""
     uid: "VW-2"
-  - pref_label: "Macro"
+  - pref_label: "Annotated Condition Diagram"
     description: ""
     uid: "VW-3"
   - pref_label: "Micro"
@@ -21,17 +21,17 @@ members:
   - pref_label: "Overall"
     description: ""
     uid: "VW-5"
-  - pref_label: "Detail"
+  - pref_label: "Detail/Macro"
     description: ""
     uid: "VW-6"
-  - pref_label: "Front"
-    description: ""
+  - pref_label: "Front (Use Front/Recto)"
+    description: "DO NOT USE—will be removed"
     uid: "VW-7"
   - pref_label: "Proper Right"
     description: ""
     uid: "VW-8"
-  - pref_label: "Back"
-    description: ""
+  - pref_label: "Back (Use Back/Verso)"
+    description: "DO NOT USE—will be removed"
     uid: "VW-9"
   - pref_label: "Proper Left"
     description: ""
@@ -42,3 +42,9 @@ members:
   - pref_label: "Bottom"
     description: ""
     uid: "VW-12"
+  - pref_label: "Location map (for macro, micro and samples)"
+    description: ""
+    uid: "VW-13"
+  - pref_label: "Photomicrograph"
+    description: ""
+    uid: "VW-14"
