--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,12 @@ env:
     - TEST_SUITE=feature
     - TEST_SUITE=unit
     - TEST_SUITE=rubocop
+    - TEST_SUITE=jasmine
 matrix:
   fast_finish: true
+  allow_failures:
+    - env: TEST_SUITE=jasmine
+
 script:
   - "bundle exec rake ci:$TEST_SUITE"
 
