Convert images to pdf, #2088
Images uploaded as text were not being converted to pdf.

Update FileSet#create_derivatives to pass pdf creation parameters to the
image derivative service.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
 before_script:
   - jdk_switcher use oraclejdk8
 before_install:
+  - sudo apt-get install jasper graphicsmagick
   - gem install bundler
   - "phantomjs --version"
   - "export PATH=$PWD/travis_phantomjs/phantomjs-2.1.1-linux-x86_64/bin:$PATH"
