2283: Rework representation and preferred representation logic * https://cits.artic.edu/redmine/issues/2283 * write lots of tests * dump the pref rep uri into the array of reps if it's not in there already * check if the pref rep is a rep by matching against attributes, not existing storage * reduce noisy warning messages in logs about solr :rows, from #resources_with * tweak the test so it had two reps in the db, then pass in a pref rep that is not a rep in the params * excluding bin files from rubocop errors since they are autogenerated locally * refactored my code to make it easier to read * in tests, passed in URI.to_s instead of URI objects * forgot about nil case - glad the add_to_citi_resource_actor_spec caught it

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,10 @@ AllCops:
     - 'db/**/*'
     - 'script/**/*'
     - 'vendor/**/*'
+    - 'bin/bundle'
+    - 'bin/rails'
+    - 'bin/rake'
+    - 'bin/setup'
 
 Metrics/LineLength:
   Enabled: false
