2351: mailer spec breaking in test environment (not lakeshore-test which runs production.rb) * https://cits.artic.edu/redmine/issues/2351 * using link_to’s and route helpers for easier markup creation, and url generation * removed @host ivar since we moved to config.action_mailer.default_options[:host] inside prod/test/dev.rb files

--- a/config/application.yml
+++ b/config/application.yml
@@ -3,6 +3,7 @@
 development:
   hydra_bin_path: "/usr/local/bin"
   LAKESHORE_ENV: "local"
+  LAKESHORE_DOMAIN: "localhost:3000"
 
 test:
   citi_api_uid: "citi_api_uid"
@@ -10,6 +11,7 @@ test:
   citi_api_endpoint: "https://citiworker"
   citi_api_ssl_verify: "false"
   hydra_bin_path: "/usr/local/bin"
+  LAKESHORE_DOMAIN: "localhost:3000"
 
 production:
 
