--- a/config/application.yml
+++ b/config/application.yml
@@ -5,6 +5,7 @@ development:
   LAKESHORE_ENV: "local"
   LAKESHORE_DOMAIN: "localhost:3000"
   user_notification_freq: "300"
+  phoenix_host: "https://phoenix-test.artic.edu"
 
 test:
   citi_api_uid: "citi_api_uid"
@@ -14,6 +15,7 @@ test:
   hydra_bin_path: "/usr/local/bin"
   LAKESHORE_DOMAIN: "localhost:3000"
   user_notification_freq: "30"
+  phoenix_host: "https://phoenix-test.artic.edu"
 
 production:
 
