Bug #1686: GUI: improve duplicate file checking (rapid GUI batches, and dupes in same batch) (#445)
https://cits.artic.edu/issues/1686

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,10 @@ matrix:
   allow_failures:
     - env: TEST_SUITE=jasmine
 
+after_script:
+  - "bundle exec rake db:version"
+  - "bundle exec rake db:migrate:status"
+
 script:
   - "bundle exec rake ci:$TEST_SUITE"
 
