2907: new fileset update api - tweaks (#485)
* passes response back to the delegate so genuine status code flows through to client
* adds individual shell scripts for common request testing
* GUI: fileset depositor should be updated on binary version update
https://cits.artic.edu/issues/2772
* error handling for when AICUser is not found, but postgres/devise acct is
* overrides file_sets behavior so we can add in duplicate checking
* adds duplicate checking to fileset updates, but rendering of error messages hash TODO

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,10 @@ Metrics/AbcSize:
 Metrics/MethodLength:
   Enabled: false
 
+Metrics/ModuleLength:
+  Exclude:
+    - app/controllers/concerns/curation_concerns/file_sets_controller_behavior.rb
+
 Metrics/ClassLength:
   Exclude:
     - 'lib/aic.rb'
@@ -36,11 +40,13 @@ Metrics/CyclomaticComplexity:
   Exclude:
     - app/services/file_set_replacement_service.rb
     - app/models/concerns/permissions/lakeshore_visibility.rb
+    - app/controllers/concerns/curation_concerns/file_sets_controller_behavior.rb
 
 Metrics/PerceivedComplexity:
   Exclude:
     - app/services/file_set_replacement_service.rb
     - app/models/concerns/permissions/lakeshore_visibility.rb
+    - app/controllers/concerns/curation_concerns/file_sets_controller_behavior.rb
 
 Style/BlockDelimiters:
   Exclude:
