--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
     - "dep_cache"
 services:
   - redis-server
+dist: trusty
 before_script:
   - jdk_switcher use oraclejdk8
 before_install:
